--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.ant-tabs, .ant-tabs-list, .ant-tabs-nav-list, .ant-tabs-nav-wrap {
-    /*width: 110px;*/
+.ant-space-item {
+    display: flex;
+    justify-content: center;
 }
